Tests/stella-implementation-in-swiftTests/Resources/development/ill-typed/redeclaration-top-function.stella
language core;

fn pupa(x : Nat) -> Nat {
    return succ(0)
}

fn pupa(x : Nat) -> Nat {
    return succ(1)
}

fn main(x : Nat) -> Nat {
    return succ(0)
}


